Desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+        <img src="./foto 88 por 88.jpg" alt="Imagem da criadora da pág de links, Mellonny Silvestre">
         <h1>Mellonny Silvestre</h1>
     </div>
 </body>
