Termino do desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <div>
         <img src="./foto 88 por 88.jpg" alt="Imagem da criadora da pág de links, Mellonny Silvestre">
         <h1>Mellonny Silvestre</h1>
+        <p>São Paulo, Brasil</p>
+        <p>"Desenvolvedora front-end, viciada em doce"</p>
+
+        <a href="https://github.com/MellonnySilvestre12TB/Mells-links">Github</a>
+        <a href="https://www.instagram.com/">Instagram</a>
+        <a href="https://www.youtube.com/">YouTube</a>
+        <a href="https://discord.com/">Discord</a>
+        <a href="https://www.tiktok.com/pt-BR/">TikTok</a>
     </div>
 </body>
 </html>
